chore: improve code readability with consistent formatting for annotations, parameters, and method comments
- Adjust formatting for annotations and parameters to improve clarity
- Reformat method comments for better alignment and readability
- Minor refactoring for spacing and code alignment across multiple classes and tests